proxied-authentication/k8s-yamls/github/flowsource-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: http://$http_host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $email $upstream_http_x_auth_request_email;
      proxy_set_header "x-forwarded-email" $email;
      proxy_set_header "provider" "github";
  name: nginx-ingress
  labels:
    app: flowsource
  name: flowsource-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: INGRESS_DNS
    http:
      paths:
      - backend:
          service:
            name: flowsource
            port:
              number: 7007
        path: /
        pathType: Prefix
